# BehaviorMatch

./: .gitignore  LICENSE  README.md  load_session.m  pyproject.toml  requirements.txt
TestData/: Freelymoving_073720_tr3_0516_154840_475_mega_sync.csv
docs/: storage-spec.md
src/behaviormatch/: __init__.py  cli.py  csv_writer.py  detection.py  discovery.py  h5_writer.py  mat_writer.py  pipeline.py  reader.py  schema.py  timing.py
src/behaviormatch/extractors/: __init__.py  base.py  codev4_4.py  codev4_5.py  mega_sync.py  wm_behavior.py
tests/: test_parser.py  test_reader.py
tests/fixtures/aborted_codev4_4/: Freelymoving_2004_tr3_0101_000000_000_console.csv
tests/fixtures/codev4_4/: Freelymoving_2002_tr1_0101_000000_000_console.csv
tests/fixtures/codev4_4_with_mega/: Freelymoving_9000_tr1_0101_000000_000.csv  Freelymoving_9000_tr1_0101_000000_000_console.csv
tests/fixtures/codev4_5/: Freelymoving_2001_codev45_0101_000000_000_console.csv  Freelymoving_2001_codev45_0101_000000_000_ffv1_frames.csv  Freelymoving_2001_codev45_0101_000000_000_ffv1_h265_rulefiltered_keepmask.csv  Freelymoving_2001_codev45_0101_000000_000_hardware_frames.csv  Freelymoving_2001_codev45_0101_000000_000_mega_sync.csv  Freelymoving_2001_codev45_0101_000000_000_mini2P_frames.csv
tests/fixtures/mega_sync_only/: Freelymoving_9999_tr3_0101_000000_000_mega_sync.csv
tests/fixtures/stage0/: Freelymoving_2003_tr0_0101_000000_000_console.csv
tests/fixtures/wm_behavior/: Freelymoving_1363_tr1_0504_185130_091.csv  Freelymoving_1363_tr1_0504_185130_091_console.csv
