[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behaviormatch"
version = "0.1.0"
description = "Headless MouseMaze behavior log normalizer."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Connor Beck" },
]
dependencies = [
    "h5py>=3.9",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
mat = [
    "scipy>=1.11",
]
dev = [
    "pytest>=7.4",
    "scipy>=1.11",
]

[project.scripts]
behaviormatch = "behaviormatch.cli:main"
behavior-match = "behaviormatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
