[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behaviormatch"
version = "0.1.0"
description = "Headless CLI for normalizing MouseMaze behavior logs into canonical HDF5 output."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Connor Beck" },
]
keywords = ["mousemaze", "behavior", "hdf5", "matlab", "analysis", "neuroscience"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "h5py>=3.9",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
mat = [
    "scipy>=1.11",
]
dev = [
    "pytest>=7.4",
    "scipy>=1.11",
]

[project.scripts]
behaviormatch = "behaviormatch.cli:main"
behavior-match = "behaviormatch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
